# mp2json

./: Cargo.toml  LICENSE.txt  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  on-pr.yml  on-push.yml  publish.yml
src/: error.rs  main.rs
